mp3/partB/solution2_optimized/solution2_optimized.log
==============================================================
File generated by Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC
Version: 2015.1
Copyright (C) 2015 Xilinx Inc. All rights reserved.

==============================================================

@I [SYN-201] Setting up clock 'default' with a period of 10ns.
@I [LIC-101] Checked out feature [HLS]
@I [HLS-10] Setting target device to 'xc7z020clg484-1'
@I [HLS-10] Analyzing design file 'partB/matrixmath.c' ... 
@E [HLS-70] Compilation errors found:
partB/matrixmath.c:82:10: error: subscripted value is not an array, pointer, or vector
                                        C[i][j] = arrayC[i][j];
                                        ~~~~^~
1 error generated.
Failed checking during preprocessing.
    while executing
"source Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3/partB/solution2_optimized/csynth.tcl"
    invoked from within
"hls::main Z:/Documents/UIUC/ECE527/ECE_527_MP/mp3/partB/solution2_optimized/csynth.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
@I [LIC-101] Checked in feature [HLS]
